# Python_CI_Repo_Template

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: config.yml
scripts/: run_main.sh
tests/: test_smoke.py
